# goit-pyweb-hw-10

./: .gitignore  pyproject.toml
quotesapp_project/: manage.py  migration_data.py
quotesapp_project/quotesapp/: admin.py  forms.py  models.py  urls.py
quotesapp_project/quotesapp/migrations/: 0001_initial.py  0002_alter_quote_author.py  0003_newquote_alter_quote_tags.py  0004_alter_newquote_author.py  0005_delete_newquote.py
quotesapp_project/quotesapp/views/: add_quote.py  author_detail.py  index.py  login.py  register.py
quotesapp_project/quotesapp_project/: asgi.py  settings.py  urls.py  wsgi.py
quotesapp_project/templates/: base.html
quotesapp_project/templates/quotesapp/: add_quote.html  author_detail.html  index.html  register.html
quotesapp_project/templates/users/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
quotesapp_project/users/: forms.py  urls.py
quotesapp_project/users/views/: login.py  logout.py  register.py  reset_password.py
